# shell

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD-APPS.md  PRD-BROWSER.md  PRD-CLIPS.md  PRD-DASHBOARD.md  PRD-DID.md  PRD-IDENTITY.md  PRD-NATIVE.md  PRD-WALLET.md  PRD.md  README.md  biome.json  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
crypto-core/: CONTRACT.md  Cargo.toml  README.md  deny.toml
crypto-core/src/: aead.rs  envelope.rs  error.rs  generate.rs  hibp.rs  identity.rs  kdf.rs  lib.rs  memlock.rs  native.rs  rng.rs  time.rs  totp.rs
docker/tauri-linux-test/: Dockerfile  run-in-container.sh
docs/: DEPLOY.md  HOW-LOGIN-WORKS.md  REVIEW-NATIVE-READINESS.md  SHELL-APP-HOSTING-OPTIONS.md  VERIFY-NATIVE-RUNTIME.md
docs/PRDs/: PRD-APPS.md  PRD-IDENTITY.md  PRD-NATIVE.md  PRD-PROVIDER-ACCOUNTS.md  PRD.md
infra/css/: seed.json
public/: embed-demo.html
public/diagrams/: login-steps-demo.html  login-steps.json  make-login-steps.py
scripts/: gen-icon-source.py  gen-icons.mjs  seed-demo.ts  seed-drive.ts  seed-embed-demo.ts  smoke-vault.ts  test-email.ts  test-manual-account.ts  test-provider-accounts.ts  test-provider-entry.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  oidc.rs  pod_fetch.rs  state.rs
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx
src/app/connect/: page.tsx
src/app/login/callback/: page.tsx
src/app/settings/: page.tsx
src/app/shell/: layout.tsx  page.tsx
src/app/widget/decks/: page.tsx
src/app/widget/gallery/: page.tsx
src/app/widget/people/: page.tsx
src/app/widget/quick-note/: page.tsx
src/app/widget/recent/: page.tsx
src/app/widget/up-next/: page.tsx
src/app/widget/vault-glance/: page.tsx
src/app/widget/wallet-balance/: page.tsx
src/apps/: registry.tsx
src/apps/home/: index.tsx
src/apps/identity/: index.tsx  useWallet.ts
src/apps/vault/: ItemDetail.tsx  ItemEditor.tsx  PasswordGenerator.tsx  ProviderAccounts.tsx  index.tsx
src/apps/wallet/: index.tsx
src/components/: ConnectForm.tsx  PasswordLoginCard.tsx  PrototypeWarning.tsx  WalletOnboarding.tsx
src/components/shell/: AccountSwitcher.tsx  AppMenu.tsx  AppSwitcher.tsx  IframeHost.tsx  ProjectSwitcher.tsx  WidgetTile.tsx  WorkspaceRail.tsx
src/lib/identity/: binding.ts  email.ts  manual-account.ts  passport-login.ts  provider-accounts.ts  provider-entry.ts  provision.ts  types.ts  wallet.ts
src/lib/platform/: detect.ts  index.ts  native.ts  types.ts  web.ts
src/lib/shell/: accounts.ts  bridge-client.ts  bridge-protocol.ts  bridge.ts  brokered-bridge.ts  catalog.ts  context.tsx  home-layout.ts  types.ts
src/lib/solid/: account-login.ts  account.ts  auth.ts  did-account.ts  email-verification.ts  passport-session.ts  pod-fs.ts  profile.ts  resume.ts  session.ts  workspaces.ts
src/lib/tokens/: api.ts
src/lib/vault/: autolock.ts  clipboard.ts  core.ts  crypto-contract.ts  model.ts
