[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge crypto core for the mind-shell Vault (Argon2id + XChaCha20-Poly1305 envelope encryption). WASM + native."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# KDF
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
sha1 = "0.10"

# AEAD
chacha20poly1305 = "0.10"

# Signatures / DID (Phase C identity layer — PRD-DID §5.9). ed25519-dalek is in
# the RustCrypto family already used here; `zeroize` makes SigningKey wipe its
# secret on drop. bs58 encodes the did:key multibase. No HD/SLIP-0010 in v0 (the
# seed IS the single master keypair — PRD-DID §2.4).
ed25519-dalek = { version = "2", features = ["zeroize"] }
bs58 = "0.5"

# RNG
rand = "0.8"
getrandom = { version = "0.2", features = [] }

# Memory hygiene / constant time
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
subtle = "2.6"

# Encoding / serialization
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native-only: mlock/munlock for the unlocked-key region (PRD-NATIVE §2). On
# Windows we call VirtualLock/VirtualUnlock directly (kernel32), so no extra dep.
[target.'cfg(all(not(target_arch = "wasm32"), unix))'.dependencies]
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
# getrandom needs the js backend to source entropy from the browser in wasm.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
